--- a/momentos.html
+++ b/momentos.html
@@ -145,12 +145,12 @@
     <h1 class="titulo">Onde tudo começou</h1>
 
     <div class="momento">
-      <img src="imagens/print5.png" alt="Nós dois sorrindo" class="zoomable" />
+      <img src="print5.png" alt="Nós dois sorrindo" class="zoomable" />
       <p>"Aquele dia em que tudo parou e só existia a gente."</p>
     </div>
 
     <div class="momento">
-      <img src="imagens/print4.png" alt="Caminhada no parque" class="zoomable" />
+      <img src="print4.png" alt="Caminhada no parque" class="zoomable" />
       <p>"Já sem esperança, ainda assim persisti."</p>
     </div>
 
