--- a/momentos2.html
+++ b/momentos2.html
@@ -125,13 +125,13 @@
   <h1>"Cada momento é um novo capítulo."</h1>
 
   <div class="carousel">
-    <img src="imagens/novaprint1.jfif" alt="Momento 1" class="active" />
-    <img src="imagens/novaprint2.jfif" alt="Momento 2" />
-    <img src="imagens/novaprint3.png" alt="Momento 3" />
-    <img src="imagens/novaprint4.png" alt="Momento 4" />
-    <img src="imagens/novaprint5.png" alt="Momento 5" />
-    <img src="imagens/novaprint6.png" alt="Momento 6" />
-    <img src="imagens/novaprint7.png" alt="Momento 6" />
+    <img src="novaprint1.jfif" alt="Momento 1" class="active" />
+    <img src="novaprint2.jfif" alt="Momento 2" />
+    <img src="novaprint3.png" alt="Momento 3" />
+    <img src="novaprint4.png" alt="Momento 4" />
+    <img src="novaprint5.png" alt="Momento 5" />
+    <img src="novaprint6.png" alt="Momento 6" />
+    <img src="novaprint7.png" alt="Momento 6" />
   </div>
 
   <div class="controls">
