--- a/momentos3.html
+++ b/momentos3.html
@@ -108,9 +108,9 @@
   <h1>Desde o inicio, eu sabia que o que havia entre nós era real...</h1>
 
   <div class="carousel">
-    <img src="imagens/print1.webp" alt="Etapa 2 - Imagem 1" class="active" />
-    <img src="imagens/print3.png" alt="Etapa 2 - Imagem 2" />
-    <img src="imagens/print2.png" alt="Etapa 2 - Imagem 3" />
+    <img src="print1.webp" alt="Etapa 2 - Imagem 1" class="active" />
+    <img src="print3.png" alt="Etapa 2 - Imagem 2" />
+    <img src="print2.png" alt="Etapa 2 - Imagem 3" />
     <!-- Adicione mais imagens conforme necessário -->
   </div>
 
