--- a/fim.html
+++ b/fim.html
@@ -89,7 +89,7 @@
 
   <p class="mensagem-final">"Não vamos desistir do que foi construído... acredita em nós, na nossa história, no que ainda podemos ser juntos."</p>
 
-  <audio id="audio" src="audio1.ogg"></audio>
+  <audio id="audio" src="augusto1.ogg"></audio>
 
   <script>
     const btn = document.getElementById('playBtn');
